fix(input): allow shrink input along with the container width
The input box inside the input container always grow even the
container width is wide enough which causes the input field
overlaps the other field next to it when the screen is smaller.

This behavior is now changed by setting the input box to shrink
when the container is narrower in smaller screen.

--- a/src/definitions/collections/form.less
+++ b/src/definitions/collections/form.less
@@ -165,7 +165,7 @@
     min-height: @actionTextareaMinHeight;
 }
 .ui.input > textarea {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
     max-width: 100%;
 }
 .ui.form textarea:not([rows]) {
